--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ h1, h2, h3, h4, h5, h6, p, div {
 body {
   font-family: 'Hiragino Kaku Gothic ProN W3', sans-serif;
   align-items: center;
+  width: 900px;
 }
 
 li {
@@ -22,7 +23,7 @@ a {
 
 header{
   height: 65px;
-    width: 1000px;
+/*     width: 1000px; */
     background-color: rgba(196, 196, 196, 0.3);
     position: fixed;
     top: 0;
@@ -60,7 +61,7 @@ header{
 
 
 .top{
-  width: 1000px;
+/*   width: 1000px; */
   height: 658px;
   margin-bottom: 30px;
   border-bottom: 3px solid rgb(150, 150, 150);
@@ -91,7 +92,7 @@ header{
 } */
 
 .second{
-  width: 1000px;
+/*   width: 1000px; */
   height: 400px;
   margin-top: 30px;
   margin-bottom: 30px;
@@ -129,7 +130,7 @@ header{
 
 footer
 {
-  width: 1000px;
+/*   width: 1000px; */
   height: 110px;
   margin-top: 30px;
   background-color: #e9e9e9;
